added new color

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h3{
     color: white;    
 }
 h3 span{
-    color: rgb(228, 56, 56);
+    color: #fff;
     font-size: 30px;
     line-height: 10px;
     letter-spacing: 2px;
