--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h3{
     color: white;    
 }
 h3 span{
-    color: #fff;
+    color:rgb(243, 48, 48);
     font-size: 30px;
     line-height: 10px;
     letter-spacing: 2px;
